# vex-minimal-reproducer

./: README.md  vex-minimal-reproducer.cabal
src/: Array.hsig  Element.hsig  Vector.hs
src-imp/: Word8.hs
src-internal/: Internal.hs
src-prim-internal-indef/: PrimArray.hs  Representation.hsig
