cabal-version: 2.2
name: vex-minimal-reproducer
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library internal
  exposed-modules: Internal 
  default-language: Haskell2010
  ghc-options: -O2 -Wall -j1
  build-depends:
    , base >=4.12.0.0 && <5
  hs-source-dirs: src-internal

library indef
  exposed-modules: Vector
  signatures:
    Element
    Array
  build-depends:
    , base >=4.12.0.0 && <5
    , internal
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall -j1

library prim-internal-indef 
  build-depends:
    , base >=4.12.0.0 && <5
    , internal
  exposed-modules: PrimArray
  signatures:
    Representation
  hs-source-dirs: src-prim-internal-indef
  default-language: Haskell2010
  ghc-options: -O2 -Wall -j1

library prim-indef
  reexported-modules: Vector
  build-depends:
    , base >=4.12.0.0 && <5
    , indef
    , prim-internal-indef
  hs-source-dirs: src-prim-indef
  default-language: Haskell2010
  ghc-options: -O2 -Wall -j1
  mixins:
    prim-internal-indef (PrimArray),
    indef (Vector as Vector) requires (Array as PrimArray),

library imp
  exposed-modules:
    Word8
  build-depends:
    , base >=4.12.0.0 && <5
    , internal
  hs-source-dirs: src-imp
  default-language: Haskell2010
  ghc-options: -O2 -Wall -j1

library
  reexported-modules:
    Vector.Word8
  build-depends:
    , imp
    , prim-indef
  mixins:
    prim-indef (Vector as Vector.Word8) requires (Element as Word8, Representation as Word8),
  ghc-options: -O2 -Wall -j1
